Bug 373500 - Generated titles (microsummaries) are not used in tree and menu places views. r=mano